fix faculty type display when wrapping

--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.scss
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.scss
@@ -65,6 +65,8 @@
         border-radius: var(--border-radius-xs);
         font-size: var(--font-size-xsx);
         font-weight: 500;
+        margin: 0 auto;
+        display: inline-block;
 
         &.full-time {
           background-color: var(--blue-fade-lighter);
